--- a/package.json
+++ b/package.json
@@ -1,23 +1,49 @@
 {
   "name": "flightboard",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "bin": {
+    "flightboard-tui": "./bin/flightboard-tui",
+    "flightboard-web": "./bin/flightboard-web",
+    "flightboard-lookup": "./bin/flightboard-lookup"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start"
+    "build": "next build --turbopack && npm run build:cli",
+    "build:cli": "tsc -p tsconfig.cli.json",
+    "start": "next start",
+    "flightboard-web": "next dev --turbopack",
+    "flightboard-tui": "tsx src/cli/tui.ts",
+    "flightboard-lookup": "tsx src/cli/lookup.ts"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@types/blessed": "^0.1.25",
+    "blessed": "^0.1.81",
+    "chalk": "^5.6.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "commander": "^14.0.0",
+    "figlet": "^1.8.2",
+    "lucide-react": "^0.542.0",
+    "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.13",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "dotenv": "^17.2.1",
+    "node-fetch": "^3.3.2",
+    "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.5",
+    "tw-animate-css": "^1.3.7",
+    "typescript": "^5"
   }
 }
