improvements to flightboard-lookup

--- a/env.example
+++ b/env.example
@@ -3,10 +3,10 @@
 # ============================================================================
 
 # Provider Priority Order (comma-separated list)
-# Available providers: airframes, flightaware, aviationstack, flightradar24, airnav, adsbim, opensky
+# Available providers: airframes, flightaware, aviationstack, flightradar24, airnav, adsbim, adsblol, opensky
 # The app will try providers in this order until it finds data
-# Default: airframes,flightaware,aviationstack,flightradar24,airnav,adsbim,opensky
-FLIGHT_PROVIDER_PRIORITY=airframes,flightaware,aviationstack,flightradar24,airnav,adsbim,opensky
+# Default: airframes,flightaware,aviationstack,flightradar24,airnav,adsbim,adsblol,opensky
+FLIGHT_PROVIDER_PRIORITY=airframes,flightaware,aviationstack,flightradar24,airnav,adsbim,adsblol,opensky
 
 # ============================================================================
 # AIRFRAMES.IO API (PRIORITY - Our service!)
@@ -54,4 +54,5 @@ AVIATION_EDGE_API_KEY=
 # FREE/OPEN PROVIDERS (No configuration needed)
 # ============================================================================
 # - adsb.im: Free flight schedule lookup by callsign and position (no API key required)
+# - adsb.lol: Free real-time ADS-B data with geographic search (no API key required)
 # - OpenSky Network: Free but with rate limits (no API key required)
