--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,12 +6,21 @@ on:
       - 'v*.*.*'  # Trigger on version tags like v1.0.0, v2.1.3, etc.
   workflow_dispatch:  # Allow manual triggering
 
+concurrency:
+  group: docker-publish-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
+  # Run CI workflow first to ensure code passes all checks
+  ci:
+    uses: ./.github/workflows/ci.yml
+    secrets: inherit
   build-and-push:
+    needs: ci  # Only run if CI passes
     runs-on: ubuntu-latest
     
     permissions:
@@ -24,8 +33,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: all
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: |
+            image=moby/buildkit:latest
+            network=host
       
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -50,7 +68,11 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: |
+            linux/amd64
+            linux/arm64
+            linux/arm/v7
+            linux/arm/v6
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -58,6 +80,8 @@ jobs:
           cache-to: type=gha,mode=max
           build-args: |
             VERSION=${{ github.ref_name }}
+          provenance: true
+          sbom: true
       
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
