breakout themes to individual files, significant improvement to matrix and classic themes

--- a/env.example
+++ b/env.example
@@ -56,3 +56,21 @@ AVIATION_EDGE_API_KEY=
 # - adsb.im: Free flight schedule lookup by callsign and position (no API key required)
 # - adsb.lol: Free real-time ADS-B data with geographic search (no API key required)
 # - OpenSky Network: Free but with rate limits (no API key required)
+
+# ============================================================================
+# UI THEME CONFIGURATION
+# ============================================================================
+# Available themes (comma-separated list)
+# Options: airport, modern, ocean, forest, sunset, matrix, superthin
+# Leave empty to enable all themes
+# Default: all themes enabled
+NEXT_PUBLIC_AVAILABLE_THEMES=airport,modern,ocean,forest,sunset,matrix,superthin
+
+# Default theme (must be one of the available themes)
+# Default: airport
+NEXT_PUBLIC_DEFAULT_THEME=airport
+
+# Default color mode
+# Options: system, light, dark
+# Default: system
+NEXT_PUBLIC_DEFAULT_COLOR_MODE=system
