--- a/tsconfig.cli.json
+++ b/tsconfig.cli.json
@@ -28,6 +28,9 @@
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "src/lib/themes/**/*.ts",
+    "src/contexts/**/*.tsx",
+    "src/components/**/*.tsx"
   ]
 }
