--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,28 @@ jobs:
     - name: Check TypeScript
       run: npx tsc --noEmit
     
-    - name: Run tests
-      run: npm test --if-present
+    - name: Run unit and integration tests
+      run: npm test -- --coverage --ci --maxWorkers=2
+    
+    - name: Upload coverage reports
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-${{ matrix.node-version }}
+        path: coverage/
+    
+    - name: Install Playwright browsers
+      run: npx playwright install --with-deps
+    
+    - name: Run E2E tests
+      run: npm run test:e2e
+    
+    - name: Upload Playwright report
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: playwright-report-${{ matrix.node-version }}
+        path: playwright-report/
+        retention-days: 30
     
     - name: Build application
       run: npm run build
