--- a/package.json
+++ b/package.json
@@ -12,6 +12,17 @@
     "build": "next build --turbopack && npm run build:cli",
     "build:cli": "tsc -p tsconfig.cli.json",
     "start": "next start",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest --testPathPattern='(spec|test)\\.(ts|tsx|js|jsx)$' --testPathIgnorePatterns='e2e|integration'",
+    "test:integration": "jest --testPathPattern='integration\\.(spec|test)\\.(ts|tsx|js|jsx)$'",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit",
     "flightboard-web": "next dev --turbopack",
     "flightboard-tui": "tsx src/cli/tui.ts",
     "flightboard-lookup": "tsx src/cli/lookup.ts",
@@ -40,13 +51,24 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.0",
+    "@swc/jest": "^0.2.39",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/node-fetch": "^2.6.13",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/supertest": "^6.0.3",
     "dotenv": "^17.2.1",
+    "jest": "^30.1.1",
+    "jest-environment-jsdom": "^30.1.1",
     "node-fetch": "^3.3.2",
+    "playwright": "^1.55.0",
+    "supertest": "^7.1.4",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
