--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
     "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
-    "lint": "next lint",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "typecheck": "tsc --noEmit",
     "flightboard-web": "next dev --turbopack",
     "flightboard-tui": "tsx src/cli/tui.ts",
@@ -51,6 +52,8 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.34.0",
+    "@next/eslint-plugin-next": "^15.5.2",
     "@playwright/test": "^1.55.0",
     "@swc/jest": "^0.2.39",
     "@tailwindcss/postcss": "^4",
@@ -63,7 +66,13 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
     "dotenv": "^17.2.1",
+    "eslint": "^9.34.0",
+    "eslint-config-next": "^15.5.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "jest": "^30.1.1",
     "jest-environment-jsdom": "^30.1.1",
     "node-fetch": "^3.3.2",
