--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:unit": "jest --testPathPattern='(spec|test)\\.(ts|tsx|js|jsx)$' --testPathIgnorePatterns='e2e|integration'",
-    "test:integration": "jest --testPathPattern='integration\\.(spec|test)\\.(ts|tsx|js|jsx)$'",
+    "test:unit": "jest --testPathIgnorePatterns='e2e|integration'",
+    "test:integration": "jest --testMatch='**/tests/integration/**/*.test.ts'",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
